# GCP-BackEnd-Repo

./: Dockerfile  NFT.json  NFTMarketplace copy.json  NFTMarketplace.json  app.py  app.yaml  cloudbuild.yaml  creds.py  dockerignore  main.py  mainOG.py  pyproject.toml  requirements.txt  service_access.json
my_flask_app/: app.py  key.json  requirements.txt
react_app/: index.html
